# lightweight_matchgates

./: .gitignore  README.md  pyproject.toml
notebooks/: chemistry_hamiltonian_my_samples.ipynb  chemistry_hamiltonian_original.ipynb
rust_backend/: Cargo.toml
rust_backend/src/: lib.rs
src/extended_matchgate_simulation/: estimation.py  gate_by_gate.py  simulator.py  simulator_py.py  utils.py
tests/: conftest.py  test_estimation.py  test_gate_by_gate.py  test_simulator.py
